[gd_scene load_steps=11 format=4 uid="uid://4sh5p4yk43wu"]

[ext_resource type="Script" path="res://cube.gd" id="1_xxuvu"]
[ext_resource type="Shader" path="res://fullwhite.gdshader" id="2_2sg17"]
[ext_resource type="Texture2D" uid="uid://pb7s2bg15fsk" path="res://center.png" id="2_o08o3"]
[ext_resource type="Material" uid="uid://c4e2x4xtvrmo" path="res://node_3d.tres" id="3_rh8vs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_epvqf"]
render_priority = 0
shader = ExtResource("2_2sg17")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/intensity = 0.0
shader_parameter/tex = ExtResource("2_o08o3")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ue43g"]
height = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sdgki"]
resource_name = "Material"
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.4

[sub_resource type="ArrayMesh" id="ArrayMesh_hbevr"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34359742465,
"index_count": 240,
"index_data": PackedByteArray("EgAJAB0AAAAJAAQAAAAIAAkABAAKAAYABAAJAAoABgALAAIABgAKAAsAAgAIAAAAAgALAAgAAwANAAIAAwAMAA0AAgAOAAYAAgANAA4ABgAPAAcABgAOAA8ABwAMAAMABwAPAAwABwARAAYABwAQABEABgASAAQABgARABIABAATAAUABAASABMABQAQAAcABQATABAABQAVAAEABQAUABUAAQAWAAMAAQAVABYAAwAXAAcAAwAWABcABwAUAAUABwAXABQAAQAZAAAAAQAYABkAAAAaAAIAAAAZABoAAgAbAAMAAgAaABsAAwAYAAEAAwAbABgABQAdAAQABQAcAB0ABAAeAAAABAAdAB4AAAAfAAEAAAAeAB8AAQAcAAUAAQAfABwADQAaAAsAGQAeAAgADgAKABEACgANAAsACgAOAA0ACwAZAAgACwAaABkACAAdAAkACAAeAB0ACQARAAoACQASABEADgAQAA8ADgARABAADAAaAA0ADAAbABoAGAAeABkAGAAfAB4AEwAdABwAEwASAB0AEAAXAA8AFgAbAAwAFQAfABgAEwAcABQAEAAUABcAEAATABQADAAXABYADAAPABcAFQAbABYAFQAYABsAFAAfABUAFAAcAB8A"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 32,
"vertex_data": PackedByteArray("AACAPwAAgD8AAIC/AACAPwAAgL8AAIC/AACAPwAAgD8AAIA/AACAPwAAgL8AAIA/AACAvwAAgD8AAIC/AACAvwAAgL8AAIC/AACAvwAAgD8AAIA/AACAvwAAgL8AAIA/p6ZMPwAAgD+npky/p6ZMvwAAgD+npky/p6ZMvwAAgD+npkw/p6ZMPwAAgD+npkw/p6ZMP6emTL8AAIA/p6ZMP6emTD8AAIA/p6ZMv6emTD8AAIA/p6ZMv6emTL8AAIA/AACAv6emTL+npkw/AACAv6emTD+npkw/AACAv6emTD+npky/AACAv6emTL+npky/p6ZMvwAAgL+npky/p6ZMPwAAgL+npky/p6ZMPwAAgL+npkw/p6ZMvwAAgL+npkw/AACAP6emTL+npky/AACAP6emTD+npky/AACAP6emTD+npkw/AACAP6emTL+npkw/p6ZMv6emTL8AAIC/p6ZMv6emTD8AAIC/p6ZMP6emTD8AAIC/p6ZMP6emTL8AAIC/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ptotq"]
resource_name = "cube_Cube"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/AADAPgAAAD8AAMA+AAAAPwAAwD4AAAA/AADAPgAAAD8AAMA+AAAAPwAAwD4AAAA/AAAgPwAAgD4AACA/AACAPgAAID8AAIA+AAAgPwAAgD4AACA/AACAPgAAID8AAIA+AADAPgAAgD4AAMA+AACAPgAAwD4AAIA+AADAPgAAgD4AAMA+AACAPgAAwD4AAIA+AAAgPwAAQD8AACA/AABAPwAAID8AAEA/AAAgPwAAQD8AAGA/AAAAPwAAYD8AAAA/AADAPgAAQD8AAMA+AABAPwAAAD4AAAA/AADAPgAAQD8AAMA+AABAPwAAAD4AAAA/AAAgPwAAgD8AACA/AACAPwAAID8AAAAAAAAgPwAAAAAAAGA/AACAPgAAYD8AAIA+AADAPgAAgD8AAMA+AACAPwAAAD4AAIA+AADAPgAAAAAAAMA+AAAAAAAAAD4AAIA+AAAAAAAAgD8AAAAAAACAPytrJj+qKfM+AAAAAAAAgD8rayY/qinzPgAAAAAAAIA/1ZRZP6op8z7VlFk/qinzPgAAAAAAAIA/AAAAAAAAgD8AAAAAAACAP9SUWT9W1ow+1JRZP1bWjD4AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPytrJj9W1ow+AAAAAAAAgD8rayY/VtaMPlfWzD5UU2Y+V9bMPlRTZj5X1sw+VFNmPlfWzD5UU2Y+V9bMPlRTZj4AAAAAAACAPwAAAAAAAIA/1JQZP1RTZj7UlBk/VFNmPtSUGT9UU2Y+AAAAAAAAgD/UlBk/gGXNPNSUGT+AZc08AAAAAAAAgD8AAAAAAACAP1bWzD6AZc08VtbMPoBlzTxW1sw+gGXNPFbWzD6AZc08VtbMPoBlzTxX1sw+1ZR5P1fWzD7VlHk/V9bMPtWUeT9X1sw+1ZR5P1fWzD7VlHk/1JQZP9WUeT/UlBk/1ZR5PwAAAAAAAIA/1JQZP9WUeT8AAAAAAACAP9SUGT8ra0Y/1JQZPytrRj8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD9W1sw+K2tGP1bWzD4ra0Y/VtbMPitrRj9W1sw+K2tGP1bWzD4ra0Y/rKwZPqop8z4AAAAAAACAP6ysGT6qKfM+AAAAAAAAgD+srBk+qinzPgAAAAAAAIA/AAAAAAAAgD+rKbM+qinzPqspsz6qKfM+AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/qimzPlbWjD6qKbM+VtaMPgAAAAAAAIA/rKwZPlbWjD6srBk+VtaMPqysGT5W1ow+AAAAAAAAgD8AAAAAAACAP1fWzD6qKfM+V9bMPqop8z5X1sw+qinzPlfWzD6qKfM+V9bMPqop8z4AAAAAAACAP9SUGT+qKfM+AAAAAAAAgD/UlBk/qinzPtSUGT+qKfM+1JQZP1bWjD4AAAAAAACAPwAAAAAAAIA/1JQZP1bWjD7UlBk/VtaMPlbWzD5W1ow+VtbMPlbWjD5W1sw+VtaMPlbWzD5W1ow+VtbMPlbWjD5X1sw+1ZQ5P1fWzD7VlDk/V9bMPtWUOT9X1sw+1ZQ5P1fWzD7VlDk/1JQZP9WUOT/UlBk/1ZQ5P9SUGT/VlDk/1JQZP9WUOT/UlBk/1ZQ5P9SUGT8sawY/AAAAAAAAgD8AAAAAAACAP9SUGT8sawY/1JQZPyxrBj9W1sw+K2sGP1bWzD4rawY/VtbMPitrBj9W1sw+K2sGP1bWzD4rawY/"),
"format": 34359742487,
"index_count": 240,
"index_data": PackedByteArray("ZAA4AJwAAwA2ABwAAwA0ADYAHQA8ACkAHQA3ADwAKABDAA8AKAA7AEMADAAyAAAADABBADIAFABNAA4AFABGAE0ADQBPACYADQBMAE8AJwBTAC0AJwBQAFMALgBHABUALgBUAEcAKwBeACUAKwBZAF4AJABiABgAJABdAGIAGQBoAB8AGQBjAGgAHgBYACoAHgBnAFgAIAB0AAcAIABsAHQABgB4ABIABgBzAHgAEwB7ACwAEwB5AHsALwBuACMALwB9AG4ACgCIAAQACgCDAIgABQCOABEABQCJAI4AEACSABYAEACNAJIAFwCEAAsAFwCTAIQAIQCbABsAIQCUAJsAGgChAAEAGgCaAKEAAgClAAgAAgCiAKUACQCVACIACQCmAJUASgCMAEAAhwCfADEAUQA9AF8AOgBLAEIAOgBOAEsAPwCGADAAPwCLAIYAMwCZADUAMwCgAJkAOQBgAD4AOQBlAGAAUgBcAFcAUgBhAFwARACKAEkARACPAIoAgACeAIUAgACjAJ4AawCdAJgAawBmAJ0AWgB+AFYAdwCRAEUAcgCkAIIAaQCXAG8AWwBwAH8AWwBqAHAASAB8AHoASABVAHwAcQCQAHYAcQCBAJAAbQCnAHUAbQCWAKcA"),
"material": SubResource("StandardMaterial3D_sdgki"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 168,
"vertex_data": PackedByteArray("AACAPwAAgD8AAIC/AACAPwAAgD8AAIC/AACAPwAAgD8AAIC/AACAPwAAgD8AAIC/AACAPwAAgD8AAIC/AACAPwAAgD8AAIC/AACAPwAAgL8AAIC/AACAPwAAgL8AAIC/AACAPwAAgL8AAIC/AACAPwAAgL8AAIC/AACAPwAAgL8AAIC/AACAPwAAgL8AAIC/AACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgL8AAIA/AACAPwAAgL8AAIA/AACAPwAAgL8AAIA/AACAPwAAgL8AAIA/AACAPwAAgL8AAIA/AACAPwAAgL8AAIA/AACAvwAAgD8AAIC/AACAvwAAgD8AAIC/AACAvwAAgD8AAIC/AACAvwAAgD8AAIC/AACAvwAAgD8AAIC/AACAvwAAgD8AAIC/AACAvwAAgL8AAIC/AACAvwAAgL8AAIC/AACAvwAAgL8AAIC/AACAvwAAgL8AAIC/AACAvwAAgL8AAIC/AACAvwAAgL8AAIC/AACAvwAAgD8AAIA/AACAvwAAgD8AAIA/AACAvwAAgD8AAIA/AACAvwAAgD8AAIA/AACAvwAAgD8AAIA/AACAvwAAgD8AAIA/AACAvwAAgL8AAIA/AACAvwAAgL8AAIA/AACAvwAAgL8AAIA/AACAvwAAgL8AAIA/AACAvwAAgL8AAIA/AACAvwAAgL8AAIA/p6ZMPwAAgD+npky/p6ZMPwAAgD+npky/p6ZMPwAAgD+npky/p6ZMPwAAgD+npky/p6ZMPwAAgD+npky/p6ZMvwAAgD+npky/p6ZMvwAAgD+npky/p6ZMvwAAgD+npky/p6ZMvwAAgD+npky/p6ZMvwAAgD+npky/p6ZMvwAAgD+npkw/p6ZMvwAAgD+npkw/p6ZMvwAAgD+npkw/p6ZMvwAAgD+npkw/p6ZMvwAAgD+npkw/p6ZMPwAAgD+npkw/p6ZMPwAAgD+npkw/p6ZMPwAAgD+npkw/p6ZMPwAAgD+npkw/p6ZMPwAAgD+npkw/p6ZMP6emTL8AAIA/p6ZMP6emTL8AAIA/p6ZMP6emTL8AAIA/p6ZMP6emTL8AAIA/p6ZMP6emTL8AAIA/p6ZMP6emTD8AAIA/p6ZMP6emTD8AAIA/p6ZMP6emTD8AAIA/p6ZMP6emTD8AAIA/p6ZMP6emTD8AAIA/p6ZMv6emTD8AAIA/p6ZMv6emTD8AAIA/p6ZMv6emTD8AAIA/p6ZMv6emTD8AAIA/p6ZMv6emTD8AAIA/p6ZMv6emTL8AAIA/p6ZMv6emTL8AAIA/p6ZMv6emTL8AAIA/p6ZMv6emTL8AAIA/p6ZMv6emTL8AAIA/AACAv6emTL+npkw/AACAv6emTL+npkw/AACAv6emTL+npkw/AACAv6emTL+npkw/AACAv6emTL+npkw/AACAv6emTD+npkw/AACAv6emTD+npkw/AACAv6emTD+npkw/AACAv6emTD+npkw/AACAv6emTD+npkw/AACAv6emTD+npky/AACAv6emTD+npky/AACAv6emTD+npky/AACAv6emTD+npky/AACAv6emTD+npky/AACAv6emTL+npky/AACAv6emTL+npky/AACAv6emTL+npky/AACAv6emTL+npky/AACAv6emTL+npky/p6ZMvwAAgL+npky/p6ZMvwAAgL+npky/p6ZMvwAAgL+npky/p6ZMvwAAgL+npky/p6ZMvwAAgL+npky/p6ZMPwAAgL+npky/p6ZMPwAAgL+npky/p6ZMPwAAgL+npky/p6ZMPwAAgL+npky/p6ZMPwAAgL+npky/p6ZMPwAAgL+npkw/p6ZMPwAAgL+npkw/p6ZMPwAAgL+npkw/p6ZMPwAAgL+npkw/p6ZMPwAAgL+npkw/p6ZMvwAAgL+npkw/p6ZMvwAAgL+npkw/p6ZMvwAAgL+npkw/p6ZMvwAAgL+npkw/p6ZMvwAAgL+npkw/AACAP6emTL+npky/AACAP6emTL+npky/AACAP6emTL+npky/AACAP6emTL+npky/AACAP6emTL+npky/AACAP6emTD+npky/AACAP6emTD+npky/AACAP6emTD+npky/AACAP6emTD+npky/AACAP6emTD+npky/AACAP6emTD+npkw/AACAP6emTD+npkw/AACAP6emTD+npkw/AACAP6emTD+npkw/AACAP6emTD+npkw/AACAP6emTL+npkw/AACAP6emTL+npkw/AACAP6emTL+npkw/AACAP6emTL+npkw/AACAP6emTL+npkw/p6ZMv6emTL8AAIC/p6ZMv6emTL8AAIC/p6ZMv6emTL8AAIC/p6ZMv6emTL8AAIC/p6ZMv6emTL8AAIC/p6ZMv6emTD8AAIC/p6ZMv6emTD8AAIC/p6ZMv6emTD8AAIC/p6ZMv6emTD8AAIC/p6ZMv6emTD8AAIC/p6ZMP6emTD8AAIC/p6ZMP6emTD8AAIC/p6ZMP6emTD8AAIC/p6ZMP6emTD8AAIC/p6ZMP6emTD8AAIC/p6ZMP6emTL8AAIC/p6ZMP6emTL8AAIC/p6ZMP6emTL8AAIC/p6ZMP6emTL8AAIC/p6ZMP6emTL8AAIC//3/+/wAA/7/+/wAA/3/+////////f/7//3///wAA/7/+//9//3///////3//f////38AAP7//7//fwAA////v///////f////v////9//v/+//9//3///////3//f////3/+/wAA/7//f/9//3/+//9//3//f////3///wAA/7////9//3///////3//f////38AAP7//7//fwAA////v/9//3//f////3//f/9///////9//3///////3//f///AAD/f/9///8AAP9//3////7/AAD/f/7///////9/////f///AAD/v/9//v8AAP+/AAD/f/9//v8AAP9//3////9/AAD///+///////9////+/////3/+//9/AAD+//+/AAD/f/9//v8AAP9//3////9//3//f/7//3//f/9/////f///AAD/v/9//v8AAP+/AAD/f/9///8AAP9//3////9/AAD///+//3//f/9/////f/9//3/+//9/AAD+//+//z//P////79UVVRV////P/9//v8AAP+//3//P////z//f///AAD/v/9//z////8//3///wAA/7//f/7/AAD/v6qqVFX///8//7//P////7//vwAA////v/9///8AAP+//3/+/wAA/79U1aoq////v/+//z////+//z//P////7+qKqoq////v/9//v8AAP+//78AAP///7//f///AAD/vwAA/7//fwAAqipU1dv7/x//f/9//3////9//3//f////7////3n/zkAAP+/Eps6+aoqqir///+//78AAP///7//f/9//3/+//9//3//f////78AAP///7//f/9//3/+//9//3//f///VNWqKv///7////+/yGVxef9//3//f////3//f/9//v//v///nOqnOlTVVNVaPv/f////v8hlcXkAAP9//3///wAA/3//f///VNVU1Vo+/9//v/+/rEXWIv///7/IZXF5AAD/f/9//v8AAP9//3///1TVqir///+//7//P////7////+/////vwAA/3//f///AAD/f/9///+qqlRV////P/+//z////+//7//f8mVcgUAAP9//3/+/wAA/3//f///qqqqqv8/Kjr/v/+/KQmUBP+//3/XgrYA/38AAP///7//f/+/3gkhNv9/AAD+//+/qqqqqv8/Kjr/v/+/pxBTCP8//79q+soCVFWqqhwG8Rz/fwAA/v//v/9/AAD///+//3//v////z//P/+/////v6oqVNXb+/8f/38AAP7//7//fwAA////v/+///+q5+o5/38AAP///7//v///RuqROv9/AAD+//+/VNVU1Vo+/9//v/+/O0odJf8//3//fwAA/z//v2r6ygJUVaqqHAbxHP7//3//f///////f/9/////P/9/M2QM+f8//z////+/VFVUVf///z/+//9//3///////3//f///AAD/v/9/AAD/P/8/////v6oqqir///+/////f/9///////9//3///wAA/7//fwAA/z//v2r6ygKqKlTV2/v/H////3//f///////f/9//////////3////7/////f/7//3//v94JITaqqqqq/z8qOv+//3//fwAA/3//P////z/+/wAA/3//////////f///qqpUVf///z//v/9/tZPtBP8//3//fwAAVFVUVf///z//f/8/////P/7/AAD/f/7///////9//v//P/9//38AAFRVqqocBvEc//////9////+/////3/+//9//7/eCSE2")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_hbevr")

[sub_resource type="BoxShape3D" id="BoxShape3D_dglka"]
size = Vector3(0.45, 0.45, 0.45)

[node name="Cube" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2465, 1.19377, 0)
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_xxuvu")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, 0, 0, 0)
material_override = SubResource("ShaderMaterial_epvqf")
texture = ExtResource("2_o08o3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_ue43g")

[node name="Cube" type="MeshInstance3D" parent="."]
transform = Transform3D(0.225, 0, 0, 0, 0.225, 0, 0, 0, 0.225, 0, 0, 0)
material_override = ExtResource("3_rh8vs")
mesh = SubResource("ArrayMesh_ptotq")
skeleton = NodePath("")

[node name="Area3D" type="Area3D" parent="Cube"]
transform = Transform3D(4.44444, 0, 0, 0, 4.44444, 0, 0, 0, 4.44444, 0, 0, 0)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube/Area3D"]
shape = SubResource("BoxShape3D_dglka")

[node name="FlashTime" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="BeamCheck" type="Timer" parent="."]
wait_time = 0.075
one_shot = true

[node name="BulletWait" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="BulletLoad" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="health_depleted" from="." to="." method="_on_health_depleted"]
[connection signal="area_entered" from="Cube/Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Cube/Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="timeout" from="FlashTime" to="." method="_on_flash_time_timeout"]
[connection signal="timeout" from="BeamCheck" to="." method="_on_beam_check_timeout"]
[connection signal="timeout" from="BulletWait" to="." method="_on_bullet_wait_timeout"]
[connection signal="timeout" from="BulletLoad" to="." method="_on_bullet_load_timeout"]
